--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,20 @@
 {
-	"name": "__MSG_appName__",
-	"description": "__MSG_appDescription__",
-	"version": "1.0.3",
+	"name": "__MSG_extension_name__",
+	"description": "__MSG_extension_description__",
+	"version": "1.0.4",
 	"default_locale": "zh_CN",
 	"icons": {
-		"16": "icon-16.png",
-		"48": "icon-48.png",
-		"128": "icon-128.png"
+		"16": "images/icon-16.png",
+		"48": "images/icon-48.png",
+		"128": "images/icon-128.png"
 	},
 	"permissions": [
-		"contextMenus"
+		"contextMenus",
+        "storage"
 	],
 	"background": {
 		"page": "background.html"
 	},
+    "options_page": "options.html",
 	"manifest_version": 2
 }
